<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
       xmlns:tools="http://schemas.android.com/tools"
       tools:showIn="@layout/f_gocard_info">

    <TableRow>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:paddingRight="25dip"
            android:text="@string/gocard_info_card_type"
            android:textSize="16sp"
            android:textStyle="bold">
        </TextView>

        <TextView
            android:id="@+id/gocard_type_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="16sp">
        </TextView>
    </TableRow>

    <TableRow>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:paddingRight="25dip"
            android:text="@string/gocard_info_issued"
            android:textSize="16sp"
            android:textStyle="bold">
        </TextView>

        <TextView
            android:id="@+id/gocard_issue_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="16sp">
        </TextView>
    </TableRow>

    <TableRow>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:paddingRight="25dip"
            android:text="@string/gocard_info_expires"
            android:textSize="16sp"
            android:textStyle="bold">
        </TextView>

        <TextView
            android:id="@+id/gocard_expire_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="16sp">
        </TextView>
    </TableRow>
</merge>